# ros2_robotics_research_toolkit

./: .gitmodules  README.md  client_machine_setup.sh  nuc_setup.sh  ros_workspace_setup.sh
.docker/camera_calibration/: docker-compose-camera-calibration.yaml
.docker/cameras/: Dockerfile.zed  docker-compose-zed.yaml
.docker/control/: Dockerfile.control  docker-compose-control-server.yaml  docker-compose-servo.yaml
.docker/foxglove/: Dockerfile.foxglove_bridge  docker-compose-foxglove-bridge.yaml  docker-compose-motion-planning.yaml
.docker/llms/: docker-compose-ollama.yaml
.docker/motion_planning/: Dockerfile.motion_planning  docker-compose-motion-planning.yaml
.docker/toolkit_examples/camera_calibration/: docker-compose-camera-calibration.yaml  docker-compose-nuc-deployment.yaml
.docker/toolkit_examples/control/: docker-compose-nuc-deployment.yaml
.docker/toolkit_examples/policy_deployment/: docker-compose-client-deployment.yaml  docker-compose-policy-deployment.yaml
.docker/tutorials/: README.md  docker-compose-motion-planning-notebook.yaml  docker-compose-servo-application.yaml
.docker/tutorials/camera_calibration/: docker-compose-client-deployment.yaml
.docker/tutorials/motion_planning/: docker-compose-client-deployment.yaml  docker-compose-motion-planning-notebook.yaml  docker-compose-nuc-deployment.yaml
.foxglove/: mujoco_panda_position.json
.foxglove/.foxglove/: xarm_joint_positions.json
.github/.github/workflows/: control.yaml  motion_planning.yaml  (+1 more)
.github/workflows/: control.yaml  foxglove_bridge.yaml  motion_planning.yaml  pages.yaml  zed.yaml
docs/: _config.yml  contribution-guidelines.md  index.md
docs/_includes/: head_custom.html
docs/hardware_setup/: franka-emika-panda.md  ufactory-lite6.md
docs/software_setup/: docker.md  host_installation.md  software-setup.md
docs/tutorials/: launch-mujoco-sim.md  moveit-motion-planning.md  onnx-policy-deployment.md  ros2-control.md  tutorials.md
src/data_collection/: README.md
src/toolkit_examples/motion_planning/: CMakeLists.txt  README.md
src/toolkit_examples/motion_planning/config/: planning_scene.rviz
src/toolkit_examples/motion_planning/launch/: motion_planning_prerequisites.launch.py
src/toolkit_examples/motion_planning/notebooks/.ipynb_checkpoints/: moveit_notebook_tutorial-checkpoint.ipynb
src/toolkit_examples/motion_planning/src/: motion_planning.py
src/toolkit_examples/policy_deployment/: package.xml  setup.cfg
src/tutorials/control/: CMakeLists.txt  README.md  package.xml
src/tutorials/control/config/: servo_pose_jtc.yaml  servo_pose_position.yaml
src/tutorials/control/launch/: control.launch.py  control_notebook.launch.py  control_server.launch.py  control_server_mujoco.launch.py  servo_pose_jtc.launch.py  servo_pose_position.launch.py
src/tutorials/control/notebooks/: moveit_notebook_tutorial.ipynb
src/tutorials/control/src/: pose_tracking_example.py  trajectory.py
src/tutorials/motion_planning/: CMakeLists.txt  README.md  package.xml
src/tutorials/motion_planning/config/: moveit_cpp.yaml  planning_scene.rviz
src/tutorials/motion_planning/launch/: motion_planning.launch.py  motion_planning_notebook.launch.py  motion_planning_prerequisites.launch.py
src/tutorials/motion_planning/notebooks/: moveit_notebook_tutorial.ipynb
src/tutorials/motion_planning/src/: blend_plans.py  motion_planning.py  motion_planning_planning_scene.py  scripted_pick_place.py
(+30 files in other folders)
